# rdo-container-registry

./: .gitignore  .gitreview  .zuul.yaml  README.rst  ansible.cfg  groups  host-preparation.yml  hosts  letsencrypt.sh  mock-certs.sh  post-config.yml  project.config  projects-creation.yml  renew-certificates.yml  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/source/: about.rst  conf.py  index.rst  installing.rst  managing.rst  troubleshooting.rst  using.rst
group_vars/: OSEv3.yml
roles/host-preparation/: README.rst
roles/host-preparation/defaults/: main.yml
roles/host-preparation/handlers/: main.yml
roles/host-preparation/tasks/: main.yml
roles/image-pruning/defaults/: main.yml
roles/image-pruning/files/: generate_tag_whitelist.py  k8s_image_tag_pruner.py  openshift_tag_pruner.py
roles/image-pruning/tasks/: main.yml
roles/image-pruning/templates/: openshift_registry_pruner.sh.j2  openshift_tag_pruner.logrotate.j2  openshift_tag_whitelist.sh.j2  tag_whitelist_generator.sh.j2
roles/projects-creation/defaults/: main.yml
roles/projects-creation/tasks/: main.yml  osp.yml  rdo.yml
