[metadata]
name = rdo-container-registry
summary = rdo-container-registry
description-file =
    README.rst
author = David Moreau Simard
author-email = dms@redhat.com
home-page = https://github.com/rdo-infra/rdo-container-registry
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/rdo-container-registry =
        hosts
        host-preparation.yml
        letsencrypt.sh
    usr/local/share/rdo-container-registry/roles = roles/*
    usr/local/share/rdo-container-registry/group_vars = group_vars/*
    usr/local/share/rdo-container-registry/doc = doc/source/*

[build_sphinx]
source-dir = docs
build-dir = docs/build
all_files = 1

[upload_sphinx]
upload-dir = docs/html

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
